[package]
name = "rust-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
fmt = "0.1.0"
rand = "0.8.5"
serde = "1.0.193"
dotenv = "0.15.0"
log = "0.4.20"
env_logger = "0.10.1"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"] 
